add upload photo capability

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,18 @@ OPENAI_API_KEY="sk-proj-your-key-here"
 # Optional: Anthropic (if using Claude)
 ANTHROPIC_API_KEY="your-anthropic-api-key-here"
 
-# Vercel Blob Storage (for AI-generated images)
+# Google Drive API (for trip photo storage)
+# Create OAuth credentials at: https://console.cloud.google.com/apis/credentials
+# 1. Create a new project or select existing
+# 2. Enable Google Drive API
+# 3. Create OAuth 2.0 Client ID (Web application)
+# 4. Add authorized redirect URI: http://localhost:3000/api/auth/google-drive/callback (for dev)
+#    and https://your-domain.com/api/auth/google-drive/callback (for production)
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+GOOGLE_REDIRECT_URI="http://localhost:3000/api/auth/google-drive/callback"
+
+# Optional: Vercel Blob Storage (legacy, for AI-generated images only)
 # Get your token from: https://vercel.com/dashboard/stores
 # Or create via Vercel CLI: vercel blob create
 BLOB_READ_WRITE_TOKEN="vercel_blob_rw_your-token-here"
