--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "googleapis": "^164.1.0",
     "groq-sdk": "^0.34.0",
     "next": "^15.5.6",
     "next-auth": "^5.0.0-beta.29",
