--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^17.2.3",
     "googleapis": "^164.1.0",
     "groq-sdk": "^0.34.0",
+    "lucide-react": "^0.554.0",
     "next": "^15.5.6",
     "next-auth": "^5.0.0-beta.29",
     "openai": "^6.6.0",
